# cuhk-mini-clip

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
configs/: base.yaml
notebooks/: 01_preview_data.ipynb  02 model_check.ipynb  02_train_debug.ipynb
scripts/: clean_and_split.py
src/: train.py  utils.py
src/datasets/: __init__.py  convert_flickr30k.py  custom.py  preview_custom.py
src/models/: image_encoder_resnet18.py  image_encoder_resnet50.py  image_encoder_smallcnn.py  text_encoder_bigru.py  text_encoder_textcnn.py  vision_encoder_smallcnn.py
src/utils/: __init__.py  device.py  param_stats.py
tests/: test_device.py  test_models.py
