[project]
name = "mini-clip"
version = "0.1.0"
description = "Lightweight CLIP reproduction with ablation study on Flickr30k and CUHK buildings"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "torch",
    "torchvision",
    "numpy",
    "matplotlib",
    "scikit-learn",
    "pyyaml",
    "pillow",
    "pytest",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

# ── uv config ──────────────────────────────────
# Default: CUDA 12.4 (for Kaggle / NVIDIA GPU)
# To switch to XPU:  change url to https://pytorch-extension.intel.com/release-whl/stable/xpu/us/
# To switch to CPU:  change url to https://download.pytorch.org/whl/cpu
[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch" }
torchvision = { index = "pytorch" }
